<resources>
    <string name="app_name">Cadastro De Clientes</string>
    <string name="login_label">Login</string>
    <string name="user_login">Usuário</string>
    <string name="user_password">Senha</string>
    <string name="nova_conta">Nova Conta</string>

    <!-- NovaContaActivity -->
    <string name="nome_usuario">Nome</string>
    <string name="sobrenome_usuario">Sobrenome</string>
    <string name="email">Email</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="criar_conta">Criar Conta</string>

    <!-- ACTION BAR -->
    <string name="search">Localizar</string>
    <string name="refresh">Atualizar</string>
    <string name="config">Configurações</string>

</resources>
